--- a/HTML Pages/gameOver.html
+++ b/HTML Pages/gameOver.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="/style.css" />
     <title>Game Over</title>
   </head>
   <body>
@@ -12,4 +12,3 @@
     <h2>Score: 0</h2>
   </body>
 </html>
-
