--- a/HTML Pages/landing.html
+++ b/HTML Pages/landing.html
@@ -8,7 +8,9 @@
   </head>
   <body>
     <h1>Welcome to Blob.io</h1>
-    <button>Start Game</button>
+    <a href="/HTML Pages/Index.html">
+      <button class="startGame">Start Game</button>
+    </a>
     <h2>Try to catch as many balls as possible</h2>
   </body>
 </html>
