created a timer for the game

--- a/HTML Pages/Index.html
+++ b/HTML Pages/Index.html
@@ -8,6 +8,8 @@
     <title>Blob.io</title>
   </head>
   <body>
+    <button class="startGame">start game</button>
+
     <p class="username">Username:</p>
     <div class="panel">
       <p class="timer">00:00</p>
