sent the final score to game over page

--- a/HTML Pages/gameOver.html
+++ b/HTML Pages/gameOver.html
@@ -4,11 +4,15 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/style.css" />
+    <!-- <script defer src="/script.js"></script> -->
+    <script defer src="/gameOver.js"></script>
+
     <title>Game Over</title>
   </head>
+
   <body>
     <h1>Game Over! Well Played</h1>
     <button class="restart button">Play Again?</button>
-    <h2>Score: 0</h2>
+    <h2 id="finalScore"></h2>
   </body>
 </html>
