--- a/HTML Pages/Index.html
+++ b/HTML Pages/Index.html
@@ -8,13 +8,11 @@
     <title>Blob.io</title>
   </head>
   <body>
-    <button class="startGame">start game</button>
-
     <p class="username">Username:</p>
     <div class="panel">
       <p class="timer">00:00</p>
       <p class="score">score:</p>
-      <p class="highscore">Highscore:</p>
+      <p class="highScore">Highscore:</p>
     </div>
 
     <div>
