completed MVP features

--- a/HTML Pages/Index.html
+++ b/HTML Pages/Index.html
@@ -5,18 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/style.css" />
     <script defer src="/script.js"></script>
-    <title>Blob.io</title>
+    <title>Document</title>
   </head>
   <body>
-    <p class="username">Username:</p>
-    <div class="panel">
-      <p class="timer">00:00</p>
-      <p class="score">score:</p>
-      <p class="highScore">Highscore:</p>
-    </div>
-
-    <div>
-      <div class="grid"></div>
-    </div>
+    <h1>Welcome to Blob.io</h1>
+    <a href="/HTML Pages/GameBoard.html">Start Game</a>
+    <h2>Try to catch as many balls as possible</h2>
   </body>
 </html>
