--- a/HTML Pages/gameOver.html
+++ b/HTML Pages/gameOver.html
@@ -12,7 +12,10 @@
 
   <body>
     <h1>Game Over! Well Played</h1>
-    <button class="restart button">Play Again?</button>
+    <a href="GameBoard.html"
+      ><button class="restart button">Play Again?</button></a
+    >
     <h2 id="finalScore"></h2>
+    <h2 class="highScore"></h2>
   </body>
 </html>
