added character objects, character selection using event handlers/local storage

--- a/HTML Pages/GameBoard.html
+++ b/HTML Pages/GameBoard.html
@@ -18,6 +18,7 @@
     <div>
       <div class="grid"></div>
       <p class="comment">press space to start</p>
+      <!-- <img src="../characters/SillyGuy/FrontGuy.gif"> -->
     </div>
   </body>
 </html>
