--- a/HTML Pages/characters.html
+++ b/HTML Pages/characters.html
@@ -4,13 +4,18 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/style.css" />
+    <script defer src="/characters.js"></script>
+    <script defer src="/script.js"></script>
+
     <title>Characters</title>
   </head>
   <body>
     <h2>Please select a character</h2>
-    <div class="characters">
-      <div>img 1</div>
-      <div>img 2</div>
-    </div>
+    <a href="/HTML Pages/GameBoard.html">
+      <div class="characters">
+        <div class="sillyGuy">img 1</div>
+        <div class="shark">img 2</div>
+      </div></a
+    >
   </body>
 </html>
