--- a/HTML Pages/Index.html
+++ b/HTML Pages/Index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/style.css" />
-    <script defer src="/script.js"></script>
+
     <title>Document</title>
   </head>
   <body>
     <h1>Welcome to Blob.io</h1>
-    <a href="/HTML Pages/GameBoard.html">Start Game</a>
+    <a href="/HTML Pages/characters.html">Start Game</a>
     <h2>Try to catch as many balls as possible</h2>
   </body>
 </html>
