added backgrounds and more styling

--- a/HTML Pages/GameBoard.html
+++ b/HTML Pages/GameBoard.html
@@ -8,17 +8,17 @@
     <title>Blob.io</title>
   </head>
   <body>
-    <p class="username">Username:</p>
     <div class="panel">
       <p class="timer">30</p>
       <p class="score">score: 0</p>
       <p class="highScore">Highscore: 0</p>
     </div>
 
-    <div>
+    <div class="container">
+      <img src="../Images\Boardbg.png" />
+
       <div class="grid"></div>
-      <p class="comment">press space to start</p>
-      <!-- <img src="../characters/SillyGuy/FrontGuy.gif"> -->
     </div>
+    <p class="comment">press space to start</p>
   </body>
 </html>
