implemented win feature

--- a/HTML Pages/GameBoard.html
+++ b/HTML Pages/GameBoard.html
@@ -7,7 +7,7 @@
     <script defer src="/script.js"></script>
     <title>Blob.io</title>
   </head>
-  <body>
+  <body class="GameBoard">
     <div class="panel">
       <p class="timer">30</p>
       <p class="score">score: 0</p>
@@ -19,6 +19,5 @@
 
       <div class="grid"></div>
     </div>
-    <p class="comment">press space to start</p>
   </body>
 </html>
