styled characters page

--- a/HTML Pages/characters.html
+++ b/HTML Pages/characters.html
@@ -9,13 +9,14 @@
 
     <title>Characters</title>
   </head>
-  <body>
+  <body class="character">
     <h2>Please select a character</h2>
     <a href="/HTML Pages/GameBoard.html">
-      <div class="characters">
-        <div class="sillyGuy">img 1</div>
-        <div class="shark">img 2</div>
-      </div></a
-    >
+      <div class="sillyGuy">
+        <img src="../Images/Frame1.png" alt="Frame 1" />
+      </div>
+      <div class="shark">
+        <img src="../Images/Frame2.png" alt="Frame 2" /></div
+    ></a>
   </body>
 </html>
