--- a/HTML Pages/gameOver.html
+++ b/HTML Pages/gameOver.html
@@ -11,7 +11,7 @@
   </head>
 
   <body>
-    <h1 class="gameOverMsg">Game Over! Well Played</h1>
+    <h1 class="gameOverMsg"></h1>
     <a href="GameBoard.html"
       ><button class="restart button">Play Again?</button></a
     >
