--- a/HTML Pages/gameOver.html
+++ b/HTML Pages/gameOver.html
@@ -7,14 +7,18 @@
     <!-- <script defer src="/script.js"></script> -->
     <script defer src="/gameOver.js"></script>
 
-    <title>Game Over</title>
+    <title>Blob.io</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Tiny5&display=swap"
+      rel="stylesheet"
+    />
   </head>
 
   <body>
     <h1 class="gameOverMsg"></h1>
-    <a href="GameBoard.html"
-      ><button class="restart button">Play Again?</button></a
-    >
+    <a href="GameBoard.html" class="restart button">Play Again?</a>
     <h2 id="finalScore"></h2>
     <h2 class="highScore"></h2>
   </body>
