--- a/HTML Pages/Index.html
+++ b/HTML Pages/Index.html
@@ -5,11 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/style.css" />
 
-    <title>Document</title>
+    <title>Blob.io</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Tiny5&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <h1>Welcome to Blob.io</h1>
     <a href="/HTML Pages/characters.html">Start Game</a>
-    <h2>Try to catch as many balls as possible</h2>
+    <h2>Explore the island, collect seashells</h2>
+    <h2>and find the legendary rare shell!</h2>
   </body>
 </html>
