--- a/HTML Pages/characters.html
+++ b/HTML Pages/characters.html
@@ -8,9 +8,15 @@
     <script defer src="/script.js"></script>
 
     <title>Characters</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Tiny5&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body class="character">
-    <h2>Please select a character</h2>
+    <p>Please select a character</p>
     <a href="/HTML Pages/GameBoard.html">
       <div class="sillyGuy">
         <img src="../Images/Frame1.png" alt="Frame 1" />
