--- a/HTML Pages/Index.html
+++ b/HTML Pages/Index.html
@@ -13,7 +13,7 @@
       rel="stylesheet"
     />
   </head>
-  <body>
+  <body class="index">
     <h1>Welcome to Blob.io</h1>
     <a href="/HTML Pages/characters.html">Start Game</a>
     <h2>Explore the island, collect seashells</h2>
