--- a/HTML Pages/gameOver.html
+++ b/HTML Pages/gameOver.html
@@ -16,7 +16,7 @@
     />
   </head>
 
-  <body>
+  <body class="gameOver">
     <h1 class="gameOverMsg"></h1>
     <a href="GameBoard.html" class="restart button">Play Again?</a>
     <h2 id="finalScore"></h2>
